# weather

./: Cargo.toml  README.md  todo.md
scripts/: README.md  download-place.sh  download-state.sh  merge.py  run.sh
src/: alerts.rs  client.rs  config.rs  error.rs  forecast.rs  hour.rs  lib.rs  location.rs  lookup.rs  main.rs  style.rs  week.rs
