[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
reqwest = {version= "0.11", features = ["blocking", "json"]}
term-table = {version = "1.3"}
textwrap = {version = "0.16"}
colored = {version = "2.0"}
chrono = {version = "0.4"}
clap = {version = "4.1", features = ["derive"]}
retry = "2.0.0"
